--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,5 +24,17 @@ services:
     ports:
       - "80:80"
 
+  mongo-express:
+    image: mongo-express:latest
+    container_name: mongo-express
+    depends_on:
+      - mongo
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=root
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=example
+      - ME_CONFIG_MONGODB_SERVER=mongo
+    ports:
+      - "8081:8081"
+
 volumes:
   mongo-data:
