--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongo
     ports:
-      - "8080:8081"
+      - "8080:8081"  # Cambiado a 8080
 
 volumes:
   mongo-data:
